# chiron-utils

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-baseline.txt  requirements-dev.txt  requirements-lock.txt  requirements.txt  requirements_temp.txt  run_ctrl_bert.sh
.github/workflows/: checks.yaml
models/finetuned_llama2_after_CPO/checkpoint-best-recent/: adapter_config.json
scripts/: run_cicero.sh  run_game.sh
src/chiron_utils/: daide2eng.py  game_utils.py  parsing_utils.py  randomize_order.py  run.sh  utils.py
src/chiron_utils/bots/: LLM_advisor_bot.py  LlmAdvisor_bot.py  __init__.py  baseline_bot.py  bert_based_deception_bot.py  csu_faaf_advisor_bot.py  elastic_advisor.py  elastic_bot.py  knn_bot.py  llm_advisor_bot.py  llm_advisor_new_bot.py  llm_inference.py  lr_bot.py  lr_probs_bot.py  mapping.json  random_proposer_bot.py
src/chiron_utils/bots/baseline_models/: __init__.py  batch_logistic_regression.py  constants.py  data_read.py  data_split.py  evaluation.py  knn_fast.py  logistic_regression.py  numerical_knn.py  preprocess.py
src/chiron_utils/scripts/: AUSTRIA_log.txt  ENGLAND_LlmAdvisor_log.txt  ENGLAND_RandomProposerAdvisor_log.txt  FRANCE_log.txt  GERMANY_log.txt  ITALY_log.txt  RUSSIA_log.txt  TURKEY_log.txt  classification_tester.py  create_game.py  download_game.py  generate_sbatch.py  run_bot.py  run_bots.sh  run_game.py  run_games.py  test_class.py
tests/: randomize_order_test.py  utils_test.py
tests/bot_tests/: bot_test.py
